2006-11-05  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #367610 – Python console doesn't allow different code blocks
	
	Patch by Brian McKenna  <puffnfresh@gmail.com>

	* plugins/pythonconsole/pythonconsole/console.py: allow the python 
	console to handle blocks

2006-11-05  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #354428 - gedit should use accessories-text-editor icon in 
	places of the text-editor one.
	
	Patch by Michael Monreal  <infernux@web.de>
	
	* data/gedit.desktop.in.in: use the new icon naming scheme

	* gedit/gedit.c (main): ditto

2006-11-05  Joachim Noreiko  <jnoreiko@yahoo.com>

 * plugins/externaltools/tools/stock-tools.xml: fixing a few mistakes 
   in the status bar descriptions of the stock External Tools. Bug 352950.

=== gedit 2.16.2 ===

2006-10-29  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.16.2 released.

2006-10-19  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-spinner.[ch]: sync to latest ephy code.

2006-10-14  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/gedit-window.c: always sync the doc name in the
	document list menu. Bug #361217.

2006-10-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-module.h:
	* gedit/gedit-prefs-manager-app.c:
	* plugins/spell/gedit-spell-language-dialog.c:

	remove double semicolons.

2006-10-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c (gedit_window_destroy): save panes
	state only on the first run of destroy. Fixes critical
	warnings. bug #360219.

2006-10-07  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filebrowser/gedit-file-browser-store.c:
	properly collate filenames.

2006-10-01  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-document-saver.c (copy_file_data)
	(async_xfer_progress): fix some C99-style variable initializations, 
	patch by Jens Granseuer.

=== gedit 2.16.1 ===

2006-10-01  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.16.1 released.
