@@ -1,3 +1,8 @@
+2006-11-07  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-io-error-message-area.c: fix incorrect grammar in
+	error messages (Bug #355965). Patch by Mark Drago.
+
 2006-11-05  Paolo Maggi  <paolo@gnome.org>
 
 	Fixes bug #367610 – Python console doesn't allow different code blocks
